<resources>
    <string name="app_name">DroidSimpleCommand</string>
    <string name="droid_forward">Forward</string>
    <string name="droid_backward">Backward</string>
    <string name="droid_stop">Stop</string>
    <string name="droid_left">Left</string>
    <string name="droid_right">Right</string>
    <string name="droid_default_ip">192.168.4.1</string>
    <string name="droid_port_title">Droid Port</string>
    <string name="droid_address_title">Droid Address</string>
    <string name="droid_default_port">8080</string>
    <string name="droid_connect">Connect</string>
</resources>